# Temporal-Take-Home

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: cli.py
src/activities/: log_activities.py  order_activities.py  shipping_activities.py  signal_activities  signal_activities.py
src/clients/: order_client.py
src/db/: crud.py  database.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 4e14b5d1f492_added_items_column_to_orders_table.py  53480d8d44b2_add_orders_payments_and_events_tables.py
src/services/: error_helper.py  event_service.py  order_service.py  shipping_service.py  signal_service.py
src/workers/: order_worker.py  shipping_worker.py
src/workflows/: order_workflow.py  shipping_workflow.py
tests/: conftest.py  test_crud.py
